Fixed: the largest lines displayed the horizontal scrollbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,3 +17,7 @@
 ul {
     list-style-type: none;
 }
+
+li.old, li.new  {
+    word-wrap: break-word;
+}
